# docker-flask-api

./: README.md  docker-compose.yml
stuff/: Dockerfile  app.py  app2.py  connect.py  pyproject.toml  requirements2.txt
stuff/static/: dark-theme.css  style.css
stuff/templates/: about.html  contact.html  home.html  success.html  user.html
